tests/baselines/reference/parseTypes.errors.txt
tests/cases/compiler/parseTypes.ts(8,1): error TS2322: Type '(s: 文字) => 无值' is not assignable to type '() => 数字'.
tests/cases/compiler/parseTypes.ts(9,1): error TS2322: Type '(s: 文字) => 无值' is not assignable to type '() => 数字'.
tests/cases/compiler/parseTypes.ts(10,1): error TS2322: Type '(s: 文字) => 无值' is not assignable to type '{ [x: 数字]: 数字; }'.
  Index signature is missing in type '(s: 文字) => 无值'.
tests/cases/compiler/parseTypes.ts(11,1): error TS2322: Type '(s: 文字) => 无值' is not assignable to type '新建 () => 数字'.
  Type '(s: 文字) => 无值' provides no match for the signature 'new (): number'.


==== tests/cases/compiler/parseTypes.ts (4 errors) ====
    var x = <() => number>null;
    var y = <{(): number; }>null;
    var z = <{new(): number; }>null
    var w = <{[x:number]: number; }>null
    function f() { return 3 };
    function g(s: string) { true };
    y=f;
    y=g;
    ~
!!! error TS2322: Type '(s: 文字) => 无值' is not assignable to type '() => 数字'.
    x=g;
    ~
!!! error TS2322: Type '(s: 文字) => 无值' is not assignable to type '() => 数字'.
    w=g;
    ~
!!! error TS2322: Type '(s: 文字) => 无值' is not assignable to type '{ [x: 数字]: 数字; }'.
!!! error TS2322:   Index signature is missing in type '(s: 文字) => 无值'.
    z=g;
    ~
!!! error TS2322: Type '(s: 文字) => 无值' is not assignable to type '新建 () => 数字'.
!!! error TS2322:   Type '(s: 文字) => 无值' provides no match for the signature 'new (): number'.
    